Started on a major rewriting of the code, also implementing history of tags user navigated through, to avoid free movement between tags