@@ -1,13 +1,14 @@
 package no.tagstory;
 
 import java.util.ArrayList;
+import java.util.LinkedList;
 
 import android.app.Application;
 import android.location.Location;
 
 public class StoryApplication extends Application {
 
-	private ArrayList<String> currentTagHistoryList;
+	private LinkedList<TagHistory> tagHistory;
 	private Location startLocation;
 	private ArrayList<Location> currentLocationHistoryList;
 	private long startTime;
@@ -16,7 +17,7 @@ public class StoryApplication extends Application {
 	public void onCreate() {
 		super.onCreate();
 		currentLocationHistoryList = new ArrayList<Location>();
-		currentTagHistoryList = new ArrayList<String>();
+		tagHistory = new LinkedList<TagHistory>();
 	}
 
 	public Location getStartLocation() {
@@ -28,11 +29,11 @@ public class StoryApplication extends Application {
 	}
 
 	public String getLastTag() {
-		return currentTagHistoryList.get(currentTagHistoryList.size() - 1);
+		return tagHistory.getLast().getTagId();
 	}
 
-	public void setStartTime(long startTime) {
-		this.startTime = startTime;
+	public void startTimer() {
+		this.startTime = System.currentTimeMillis();
 	}
 
 	public void setStartLocation(Location startLocation) {
@@ -61,6 +62,59 @@ public class StoryApplication extends Application {
 	
 	public void emptyHistory() {
 		currentLocationHistoryList.clear();
-		currentTagHistoryList.clear();
+		tagHistory.clear();
+	}
+
+	public void addTagTohistory(String tag, String nextTag) {
+		tagHistory.add(new TagHistory(tag, nextTag));
+	}
+
+	public boolean hasUserVisited(String tagId) {
+		return tagHistory.contains(tagId);
+	}
+
+	public String getNextTagFor(String tagId) {
+		return tagHistory.get(tagHistory.lastIndexOf(tagId)).getNextTag();
+	}
+
+	public boolean hasPreviousTag(String tagId) {
+		return tagHistory.lastIndexOf(tagId) > 0;
+	}
+
+	public String getPreviousTag(String tagId) {
+		return tagHistory.get(tagHistory.lastIndexOf(tagId) - 1).getTagId();
+	}
+
+	private class TagHistory {
+
+		private final String tag;
+		private final String nextTag;
+
+		public TagHistory(String tag, String nextTag) {
+			this.tag = tag;
+			this.nextTag = nextTag;
+		}
+
+		public String getTagId() {
+			return tag;
+		}
+
+		public String getNextTag() {
+			return nextTag;
+		}
+
+		@Override
+		public boolean equals(Object o) {
+			if (o instanceof String) {
+				return tag.equals(o);
+			}
+
+			return super.equals(o);
+		}
+
+		@Override
+		public int hashCode() {
+			return super.hashCode();
+		}
 	}
 }
